# Video-auto-editor

./: KeHoach.txt  README.md  controller.py  document.docx  folder_settings.json  requirements_vpn.txt  test_format_conversion.py  video_filters.json  vpn_cache.json  ~$cument.docx
actions/: __init__.py  api_service.py  audio_processor.py  base_action.py  compressor.py  content_generator.py  filter_applier.py  folder_manager.py  format_converter.py  logo_remover.py  resolution_changer.py  speed_adjuster.py  system_info.py  video_filter_tester.py  video_trimmer.py  (+4 more)
autoEdit-video-UI-Desktop/: README.md  UI_STRUCTURE.txt  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
autoEdit-video-UI-Desktop/config/: settings.ini
autoEdit-video-UI-Desktop/docs/: DEVELOPMENT.md  FEATURES.md  UI_DESIGN.md
autoEdit-video-UI-Desktop/resources/styles/: main.qss
autoEdit-video-UI-Desktop/src/controllers/: __init__.py  main_controller.py
autoEdit-video-UI-Desktop/src/core/: app.py
autoEdit-video-UI-Desktop/src/models/: settings_model.py  video_model.py
autoEdit-video-UI-Desktop/src/services/: api_service.py  file_service.py  video_converter_service.py  video_service.py
autoEdit-video-UI-Desktop/src/ui/: init.py
autoEdit-video-UI-Desktop/src/ui/styles/: main_styles.py
autoEdit-video-UI-Desktop/src/ui/widgets/: __init__.py  file_drop_widget.py  folder_selector_widget.py  format_converter_widget.py  navigation_widget.py  video_player_widget.py
autoEdit-video-UI-Desktop/src/ui/widgets/video_editor/: VIDEO_PLAYER_STRUCTURE.md  __init__.py  init.py  media_library_widget.py  playback_controls_widget.py  properties_panel_widget.py  timeline_widget.py  toolbar_widget.py  video_cache_manager.py  video_editor_widget.py  video_editor_widget_fixed.py  video_frame_widget.py  video_player_core.py  video_preview_widget.py  video_preview_widget_simple.py
autoEdit-video-UI-Desktop/src/ui/windows/: main_window.py
autoEdit-video-UI-Desktop/src/utils/: constants.py  helpers.py
autoEdit-video-UI-Desktop/src/widgets/: file_drop_widget.py  folder_selector_widget.py
autoEdit-video-UI-Desktop/tests/test_ui/: __init__.py
(+33 files in other folders)
