[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoedit-video-ui-desktop"
version = "1.0.0"
description = "Professional desktop video editing interface for VideoForge"
authors = [
    {name = "VideoForge Team", email = "team@videoforge.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

keywords = ["video", "editing", "ui", "desktop", "pyqt"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "PyQt6>=6.4.0",
    "opencv-python>=4.7.0",
    "Pillow>=9.4.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-qt>=4.2.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

build = [
    "pyinstaller>=5.8.0",
    "setuptools>=67.0.0",
    "wheel>=0.38.0"
]

[project.urls]
Homepage = "https://github.com/videoforge/autoedit-ui-desktop"
Repository = "https://github.com/videoforge/autoedit-ui-desktop"
Documentation = "https://autoedit-ui-desktop.readthedocs.io"
"Bug Tracker" = "https://github.com/videoforge/autoedit-ui-desktop/issues"

[project.scripts]
autoedit-ui = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
